--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,36 @@
 <mat-sidenav-container fullscreen>
 
-    <mat-sidenav #start>
-        <mat-nav-list (click)="start.close()">
+  <mat-sidenav #start>
+    <mat-nav-list (click)="start.close()">
 
-            <a mat-list-item routerLink="/courses">
-                <mat-icon>library_books</mat-icon>
-                <span>Courses</span>
-            </a>
+      <a mat-list-item routerLink="/courses">
+        <mat-icon>library_books</mat-icon>
+        <span>Courses</span>
+      </a>
 
-            <a mat-list-item routerLink="/login">
-                <mat-icon>account_circle</mat-icon>
-                <span>Login</span>
-            </a>
+      <ng-container *ngIf="isLoggedOut$ | async">
+        <a mat-list-item routerLink="/login">
+          <mat-icon>account_circle</mat-icon>
+          <span>Login</span>
+        </a>
+      </ng-container>
 
-            <a mat-list-item  (click)="logout()">
-                <mat-icon>exit_to_app</mat-icon>
-                <span>Logout</span>
-            </a>
+      <ng-container *ngIf="isLoggedIn$ | async">
+        <a mat-list-item (click)="logout()">
+          <mat-icon>exit_to_app</mat-icon>
+          <span>Logout</span>
+        </a>
+      </ng-container>
 
-        </mat-nav-list>
+    </mat-nav-list>
 
-    </mat-sidenav>
+  </mat-sidenav>
 
-    <mat-toolbar color="primary">
-        <button class="menu-button" mat-icon-button (click)="start.open('mouse')">
-            <mat-icon>menu</mat-icon>
-        </button>
-    </mat-toolbar>
+  <mat-toolbar color="primary">
+    <button class="menu-button" mat-icon-button (click)="start.open('mouse')">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </mat-toolbar>
 
   <div class="spinner-container" *ngIf="loading">
 
@@ -34,6 +38,6 @@
 
   </div>
 
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 
 </mat-sidenav-container>
